<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_livedata_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_default_label"
            android:textSize="@dimen/text_size_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mb_livedata_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_data_btn_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label" />

        <TextView
            android:id="@+id/tv_stateflow_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_default_label"
            android:textSize="@dimen/text_size_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mb_stateflow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_flow_btn_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label" />

        <TextView
            android:id="@+id/tv_sharedflow_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_default_label"
            android:textSize="@dimen/text_size_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mb_sharedflow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shared_flow_btn_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label" />

        <TextView
            android:id="@+id/tv_flow_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_default_label"
            android:textSize="@dimen/text_size_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/mb_flow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flow_btn_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>